--- a/styles/hoto_style.css
+++ b/styles/hoto_style.css
@@ -77,6 +77,7 @@ main {
 	gap: .5rem;
 	padding-top: .5rem;
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	padding-bottom: clamp(0em, 5vw + 0.15rem - 1.2em, 1.0em);
 }
 .carousel-thumbnails img {
 	width: 100%;
@@ -123,7 +124,6 @@ main {
 }
 
 .product-description {
-	font-size: 0.95rem;
-	line-height: 1.55rem;
+	font-size: clamp(0.8rem, 2vw + 0.5rem, 1.0rem);
 }
 
